# sncf-departure-board

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py  settings.py
app/static/css/: styles.css
app/static/js/: constants.js  refresh.js  utils.js
app/templates/: index.html
scripts/: get_departures.py  get_stop_area.py
