[project]
name = "sncf-display-boards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "jinja2>=3.1.5",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
]


[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.9.4", "types-requests>=2.32.0.20241016"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "I",    # isort
    "E",    # pycodestyle
    "S",    # flake8-bandit
    "N",    # pep8-naming
    "PERF",
]

ignore = [
    "S101", # flake8-bandit - Use of assert detected
]
